# kurec-rewrite

./: Cargo.toml  LICENSE  cleanup.sh  package-lock.json  package.json
.devcontainer/: .env  Dockerfile  compose.yml  devcontainer.json  startup.sh
.devcontainer/config/: .gitignore  nats-server.conf
.github/workflows/: rust.yml
.husky/: pre-commit  pre-push
docs/develop/mirakc/: docs.json
mirakc-docker/: Dockerfile  mirakc-init.sh
rust/libs/domain/: Cargo.toml
rust/libs/domain/src/: error.rs  event.rs  lib.rs
rust/libs/domain/src/model/: event.rs  mod.rs  program.rs  url_extractor.rs
rust/libs/domain/src/ports/: html_fetcher.rs  image_fetcher.rs  image_processor.rs  mod.rs  programs_retriever.rs
rust/libs/domain/src/repository/: kvs.rs  mod.rs
rust/libs/domain/src/service/: html_parser.rs  image_processor.rs  mod.rs
rust/libs/domain/src/types/: mod.rs
rust/libs/domain/src/usecase/: mod.rs  ogp_image_processor.rs
rust/libs/infra/http/: Cargo.toml
rust/libs/infra/http/src/: html_fetcher.rs  image_fetcher.rs  lib.rs
rust/libs/infra/mirakc/: Cargo.toml
rust/libs/infra/mirakc/src/: http_client.rs  lib.rs  programs_retriever.rs  sse.rs  sse_event.rs
rust/libs/infra/nats/: Cargo.toml
rust/libs/infra/nats/src/: error.rs  kvs.rs  lib.rs  nats.rs  repositories.rs  stream.rs  stream_manager.rs  test_util.rs
rust/libs/infra/nats/tests/: toxiproxy_test.rs
rust/libs/infra/stream/: Cargo.toml
rust/libs/test_util/: Cargo.toml
rust/libs/test_util/src/: lib.rs  toxiproxy.rs
