[workspace]
resolver = "2"
members = [
    "rust/bin/kurec",
    "rust/libs/domain",
    "rust/libs/infra/http",
    "rust/libs/infra/mirakc",
    "rust/libs/infra/nats",
]

[workspace.package]
version = "0.0.1"
authors = ["KuRec Team"]
description = "KuRec"
documentation = "https://kurec-tool.github.io"
edition = "2024"
