[package]
name = "domain"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.126", features = ["preserve_order"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
bytes = "1.10.1"
linkify = "0.10.0"
url = "2.5.0"
