[package]
name = "test_util"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
testcontainers = "0.23.3"
tracing = "0.1.41"
bollard = "0.18.1"
anyhow = "1.0.98"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = "1.44.2"
rand = "0.9.1"
serde_json = "1.0.140"
