[package]
name = "http"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.88"
domain = { path = "../../domain" }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt"] }
