[package]
name = "mirakc"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
eventsource-client = "0.15.0"
futures = "0.3.31"
reqwest = "0.12.15"
thiserror = "2.0.12"
tracing = "0.1.41"
tokio = "1.44.2"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
warp = "0.3.7"
