[package]
name = "nats"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
async-nats = "0.40.0"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["json"] }
test_util = { path = "../../test_util" }
tokio = { version = "1.44.2", features = ["macros", "rt", "time", "process"] }
