[package]
name = "nats"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
async-nats = "0.40.0"
async-trait = "0.1.77"
bytes = "1.10.1"
domain = { path = "../../domain" }
futures = "0.3.31"
heck = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.98"
bollard = "0.18.1"
futures = "0.3.31"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
testcontainers = "0.23.3"
tokio = { version = "1.44.2", features = ["macros", "rt", "time", "process"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
